# genevariate

./: .dockerignore  .gitignore  Dockerfile  INSTALL.md  LICENSE  README.md  build_linux.sh  build_mac.sh  build_windows.bat  docker-compose.yml  download_zebrafish_gpls.py  genevariate.spec  install.py  pyproject.toml  repair_gpl4481_gpl15957.py  requirements.txt  retry_failed_gpls.py  retry_gpl13832.py  retry_remaining.py  run_local_colab_gpu.sh
gemma4_version/: ARCHITECTURE.txt  llm_extractor.py  profile_20_samples.py  run_batch_terminal.py  run_headless.py  test_gemma4_all_phases.py
notebooks/: genevariate_colab.ipynb  genevariate_colab_gpu.ipynb
src/genevariate/: __init__.py  config.py  main.py
src/genevariate/core/: __init__.py  ai_engine.py  count_io.py  db_loader.py  external_enrichment.py  extraction.py  gpl_downloader.py  gse_context.py  gse_worker.py  memory_agent.py  nlp.py  ns_repair_pipeline.py  ollama_manager.py  reproducibility.py  statistics.py
src/genevariate/core/analysis/: __init__.py  activity.py  bimodality.py  box_model.py  cross_modality.py  enrichment.py  integration.py  meta_enrichment.py  overdispersion.py  pseudo_cohorts.py  rnaseq.py  synergy.py  variability.py
src/genevariate/core/chatbot/: __init__.py  agent.py  charts.py  code_exec.py  langchain_agent.py  learned.py  registry.py  router.py  tools.py
src/genevariate/core/llm_extractor/: UPSTREAM_LICENSE  __init__.py  cached_extractors.py  cli.py  gse_context_cache.py  gse_summarizer.py  llm_backend.py  mesh_lookup.py  phase1.py  phase1b.py  phase1c_consensus.py  phase1c_dspy.py  phase1c_semantic.py  phase2_mesh.py  run_phase1c_canonicalize.py  upstream_cli.py  upstream_requirements.txt
src/genevariate/core/llm_extractor/agents/: __init__.py  base.py  collapser.py  coordinator.py  durable_bus.py  ood_mesh_minter.py  router.py  skills.py  tracing.py  verifier.py
src/genevariate/core/llm_extractor/compiled/: extract_condition.json  extract_tissue.json  extract_treatment.json
src/genevariate/core/sources/: __init__.py  archs4.py  base.py
src/genevariate/gui/: __init__.py  app.py  compare_analysis.py  deterministic_extraction.py  evaluation.py  label_reextraction.py  ns_repair_app.py  region_analysis.py  standalone_extraction.py  theme.py
src/genevariate/gui/windows/: __init__.py  activity_inference.py  cellxgene_browser.py  chat_sidebar.py  compare_dist.py  dialogs.py  interactive_subset.py  rnaseq_de.py  scrna_plots.py
src/genevariate/memory/: __init__.py
src/genevariate/sources/: __init__.py  archs4.py  cellxgene.py  discovery.py
src/genevariate/utils/: __init__.py  anndata_io.py  export_manager.py  plot_types.py  plotting.py  pseudobulk.py  viz_style.py  workers.py
tests/: conftest.py  test_activity.py  test_bimodality.py  test_box_model.py  test_cellxgene.py  test_cellxgene_badge.py  test_chatbot.py  test_count_io.py  test_cross_modality.py  test_enrichment.py  test_integration.py  test_langchain_agent.py  test_meta_enrichment.py  test_overdispersion.py  test_pseudo_cohorts.py  test_reproducibility.py  test_rnaseq.py  test_sources.py  test_synergy.py  test_variability.py
tools/: clean_logo_rim.py  make_synthetic_platform.py  make_transparent_logo.py  refine_logo_rim.py  smooth_logo_edges.py  validate_synthetic.py
